# projects

./: .gitignore  Makefile  README.md
.cursor/: always.mdc  backend.mdc  create_rule.mdc  frontend.mdc  project_context.mdc
.cursor/rules/: frontend-style.mdc  rules.mdc
backend/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: add_last_accessed_to_projects.py  d990607d9fe8_create_projects_tasks.py
backend/app/: database.py  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: admin.py  projects.py  tasks.py
backend/app/crud/: __init__.py  project.py  task.py
backend/app/models/: project.py  task.py
backend/app/schemas/: project.py  task.py
backend/app/utils/: admin.py
frontend/: README.md  index.html  jababa-shared-styles.js  main.js  package-lock.json  package.json  vite.config.js
frontend/components/: app-shell.js  breadcrumb-trail.js  plus-menu.js  project-card.js  project-form.js  search-dialog.js  task-form.js  task-list.js
frontend/jabajaba/: base.js  projects.js  tasks.js
frontend/pages/: admin.html  admin.js  home-page.js  project-detail-page.js  project.html  project.js  projects-page.js  projects.html  projects.js  settings-page.js  tasks-page.js  tasks.html  tasks.js
frontend/services/: admin.js  base.js  projects.js  search.js  tasks.js
frontend/styles/: shared-styles.js  tokens.css
frontend/utils/: format.js
